# premval

./: .dockerignore  .gitignore  AGENTS.md  CODING_STANDARDS.md  Dockerfile  LICENSE  METRICS.md  PLAN.md  README.md  modal_app.py  pyproject.toml
data/: contamination_labels.yaml
inference/: README.md  alphaflow_run.py  atlas_msa.py  bioemu_modal.py  bioemu_run.py  common.py  confdiff_run.py  esmdiff_modal.py  esmdiff_run.py  esmflow_modal.py  esmflow_run.py  str2str_run.py  web_modal.py
plans/: METHODS.md  METRICS_II.md  dataset_collection.md
results/: alphaflow_md_base.json  alphaflow_md_distilled.json  bioemu.json  esmdiff.json  esmflow_md_base.json  esmflow_md_distilled.json
results/val/: bioemu.json  esmdiff.json  esmflow_md_distilled.json
src/premval/: cli.py  io.py  leaderboard.py  models.py  scoring.py  topology.py
src/premval/data/: __init__.py  atlas.py  published.py  rcsb.py  references.py  samples.py
src/premval/metrics/: __init__.py  alphaflow_port.py  panel.py
src/premval/viz/: __init__.py  matplotlib_renderer.py  ordering.py  pdb_input.py  pymol_renderer.py  renderer.py  video.py
src/premval/web/: __init__.py  app.py
src/premval/web/templates/: base.html  chain.html  chain_missing.html  landing.html  leaderboard.html
tests/: test_atlas_smoke.py  test_data.py  test_io.py  test_leaderboard.py  test_metrics_panel.py  test_metrics_port.py  test_models.py  test_ordering.py  test_pdb_input.py  test_port_fidelity.py  test_published.py  test_pymol_renderer.py  test_rcsb.py  test_references.py  test_scoring.py  test_topology.py  test_version.py  test_viz.py  test_web.py
