[project]
name = "premval"
version = "0.1.0"
description = "Protein ensemble evaluation tooling."
authors = [
    {name = "Jacob Silterra", email = "603941+jsilter@users.noreply.github.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "mdtraj>=1.10",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
viz = [
    "matplotlib>=3.8",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "premval", from = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["mdtraj", "mdtraj.*", "sklearn", "sklearn.*"]
ignore_missing_imports = true
