[project]
name = "premval"
version = "0.1.0"
description = "Protein ensemble evaluation tooling."
authors = [
    {name = "Jacob Silterra", email = "603941+jsilter@users.noreply.github.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "numpy (>=2.4.5,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.5,<2.0)",
    "mdtraj (>=1.11.1.post1,<2.0.0)",
    "tqdm (>=4.66,<5.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[project.scripts]
premval = "premval.cli:main"

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
]
viz-pymol = [
    "pymol-open-source>=3.2.0a0,<4.0.0",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "httpx>=0.27",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "premval", from = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore:setDaemon\\(\\) is deprecated.*:DeprecationWarning:pymol.internal",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["mdtraj"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pymol"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tqdm"]
ignore_missing_imports = true
